--- a/src/ZKMS/views/webmaster/accounts.html
+++ b/src/ZKMS/views/webmaster/accounts.html
@@ -1,3 +1,42 @@
-<p>accounts</p>
+<div class="main">
+	<p>accounts</p>
 
 <p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+<p>主要是添加删除修改</p>
+</div>
