--- a/src/ZKMS/views/webmaster/zones.html
+++ b/src/ZKMS/views/webmaster/zones.html
@@ -1,3 +1,47 @@
-<p>zones</p>
+<div class="main">
+	<h1>Select a zone you want to view</h1>
 
-<p>这里是管理所有zone的所有节点</p>
+	<div class="zone-item">
+		<h3><span class="glyphicon glyphicon-cloud"></span> zone1</h3>
+		<ul>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+		</ul>
+		<button type="button" class="btn btn-default btn">
+			<span class="glyphicon glyphicon-circle-arrow-right"></span> View
+		</button>
+	</div>
+
+	<div class="zone-item">
+		<h3><span class="glyphicon glyphicon-cloud"></span> zone2</h3>
+		<ul>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+		</ul>
+		<button type="button" class="btn btn-default btn">
+			<span class="glyphicon glyphicon-circle-arrow-right"></span> View
+		</button>
+	</div>
+
+	<div class="zone-item">
+		<h3><span class="glyphicon glyphicon-cloud"></span> zone3</h3>
+		<ul>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+			<li><span class="glyphicon glyphicon-th-large"></span> 192.168.1.1:2181</li>
+		</ul>
+		<button type="button" class="btn btn-default btn">
+			<span class="glyphicon glyphicon-circle-arrow-right"></span> View
+		</button>
+	</div>
+
+	<div class="clear"></div>
+</div>
