--- a/src/ZKMS/views/webmaster/settings.html
+++ b/src/ZKMS/views/webmaster/settings.html
@@ -25,9 +25,8 @@
 		</form>
 	</div>
 
-
 	<h3>Exist Zones</h3>
-	<table class="zones-table">
+	<table class="list-table">
 		<tr>
 			<th style="width:200px;">Zone ID</th>
 			<th>Hosts</th>
