--- a/src/ZKMS/views/webmaster/zones.html
+++ b/src/ZKMS/views/webmaster/zones.html
@@ -3,7 +3,7 @@
 
 	{{range $index, $val := .zones}}
 	<div class="zone-item">
-		<h3><a href="/webmaster/zones?zone={{$val.Id}}"><span class="glyphicon glyphicon-cloud"></span> {{$val.Id}}</a></h3>
+		<h3><a href="/webmaster/zktree?zone={{$val.Id}}"><span class="glyphicon glyphicon-cloud"></span> {{$val.Id}}</a></h3>
 		<ul>
 			{{range $j, $v:= $val.Ip}}
 				{{if ne $v ""}}
@@ -13,7 +13,7 @@
 				{{end}}
 			{{end}}
 		</ul>
-		<a href="/webmaster/zones?zone={{$val.Id}}" class="btn btn-default btn">
+		<a href="/webmaster/zktree?zone={{$val.Id}}" class="btn btn-default btn">
 			<span class="glyphicon glyphicon-circle-arrow-right"></span> View
 		</a>
 	</div>
