--- a/src/ZKMS/views/webmaster/zktree.html
+++ b/src/ZKMS/views/webmaster/zktree.html
@@ -3,16 +3,17 @@
 	
 </div>
 	<div class="zktree-left">
-		<h4>ZNode Tree</h4>
-
-		<div id="zktree_div">
-
-		
+		<h4 style="color:#FFF;">Current Zone: {{.cur_zoneid}}</h4>
+		<div id="zktree_div">		
 	</div>
 
 	<div class="zktree-right">
-		<h4>ZNode Info</h4>
-		<div class="node_show"></div>
+		<h4 class="dragdiv-title">Data & Stat</h4>
+		<div id="about" class="nano">
+			<div class="nano-content">
+				<div class="node_show"></div>
+			</div>
+		</div>
 	</div>
 
 	<div id="data_field">
