--- a/src/ZKMS/static/css/webmaster.css
+++ b/src/ZKMS/static/css/webmaster.css
@@ -15,7 +15,6 @@ body{background: #333333;}
 .login-stat{position: absolute;left:120px;top:50px;}
 .copyright{position: absolute;left: 20px;bottom: 50px;font-size: 12px;color: #555;}
 
-
 /* rightside main */
 .main{position:relative;width: 100%; padding:20px;color: #CCC;min-width:890px;}
 .create-form{padding:20px 10px;border: 1px solid #555;margin: 10px 0;}
@@ -34,20 +33,24 @@ body{background: #333333;}
 
 /* rightside settings style */
 
+
+
+
 /* rightside account style */
 
+
+
+
 /* rightside zktree */
-.zktree-left{padding-right: 350px;}
-.zktree-right{position: fixed;right: 20px;top: 20px;width:350px;}
+.zktree-left{}
+.zktree-right{position: fixed; left: 700px;top: 20px;width:450px; height: 500px;}
+.node_show .znodeinfo-path{color: green;font-size: 16px;}
+.node_show .znodeinfo-data{color: yellow;font-size: 16px; white-space: pre;}
 
 /* rewrite jstree triangle icon color */
-.jstree-default .jstree-icon{
-	background-image:url("/static/img/32px.png");
-}
-
-
-
-
-
-
-
+.jstree-default .jstree-icon{background-image:url("/static/img/32px.png");}
+/* nanoscrollbar style */
+.nano { background: #000;opacity: 0.85; width: 450px; height: 500px; border: 1px solid #505050; border-radius: 10px;}
+.nano .nano-content {padding: 10px; overflow:auto;}
+.nano .nano-pane   { background: #888; }
+.nano .nano-slider { background: #111; }
