--- a/src/ZKMS/views/webmaster/dashboard.html
+++ b/src/ZKMS/views/webmaster/dashboard.html
@@ -1,4 +1,11 @@
-<p>dashboard</p>
+<div id="about" class="nano">
+    <div class="nano-content"> 
+    </div>
+</div>
 
-<p>这里主要显示一些重要的信息和快速链接</p>
-
+<div class="drag">
+  <p class="title">标题(点击标题拖动)</p>
+</div>
+<div class="drag1">
+  <p class="title">标题</p>
+  点击我移动 </div>
