--- a/src/ZKMS/views/webmaster/dashboard.html
+++ b/src/ZKMS/views/webmaster/dashboard.html
@@ -1,11 +1,1 @@
-<div id="about" class="nano">
-    <div class="nano-content"> 
-    </div>
-</div>
-
-<div class="drag">
-  <p class="title">标题(点击标题拖动)</p>
-</div>
-<div class="drag1">
-  <p class="title">标题</p>
-  点击我移动 </div>
+bala bala bala
