--- a/src/ZKMS/views/webmaster/reports.html
+++ b/src/ZKMS/views/webmaster/reports.html
@@ -1,3 +1,12 @@
-<p>reports</p>
+<div class="main">
+	<h1>Please select one of the following items.</h1>
 
-<p>这里主要是展示broker和looger的动态报表</p>
+	<div class="sub-nav">
+		<ul>
+			<li>Broker</li>
+			<li>Logger</li>
+			<li>App</li>
+			<li>Topic</li>
+		</ul>
+	</div>
+</div>
