--- a/src/ZKMS/views/webmaster/brokerdetail.html
+++ b/src/ZKMS/views/webmaster/brokerdetail.html
@@ -10,6 +10,8 @@
 </div>
 
 <!--绑定一些数据用于js调用-->
+<input id="zoneid" type="hidden" value="{{.zoneid}}">
+<input id="brokerid" type="hidden" value="{{.brokerid}}">
 <input id="cpuData" type="hidden" value="{{.cpuData}}">
 <input id="netData" type="hidden" value="{{.netData}}">
 <input id="diskData" type="hidden" value="{{.diskData}}">
