--- a/src/ZKMS/views/webmaster/brokerdetail.html
+++ b/src/ZKMS/views/webmaster/brokerdetail.html
@@ -1,4 +1,5 @@
 <div class="main">
+	<a class="reports-backlink" href="javascript:void(0);" onclick="history.back(-1);"><i class="glyphicon glyphicon-circle-arrow-left"></i> Back</a>
 	<h4>
 		Current zone: 
 		<span class="text-primary"><strong>{{.zoneid}}</strong></span>
