--- a/src/ZKMS/views/webmaster/reports.html
+++ b/src/ZKMS/views/webmaster/reports.html
@@ -3,10 +3,10 @@
 
 	<div class="sub-nav">
 		<ul>
-			<li>Broker</li>
-			<li>Logger</li>
-			<li>App</li>
-			<li>Topic</li>
+			<li><a href="/webmaster/reports/brokers">Brokers</a></li>
+			<li><a href="/webmaster/reports/loggers">Loggers</a></li>
+			<li><a href="/webmaster/reports/apps">Apps</a></li>
+			<li><a href="/webmaster/reports/topics">Topics</a></li>
 		</ul>
 	</div>
 </div>
