--- a/src/ZKMS/static/css/webmaster.css
+++ b/src/ZKMS/static/css/webmaster.css
@@ -68,9 +68,21 @@ body{background: #333333;}
 
 /* rightside zktree */
 .zktree-left{}
+.current-zone{font-size: 14px; margin: 10px 0;}
+.current-zone label{color:#666;}
+.current-zone select{padding: 2px 10px;color: #555;font-size: 14px;font-weight: bold;}
 .zktree-right{position: fixed; left: 700px;top: 20px;width:450px; height: 500px;}
 .node_show .znodeinfo-path{color: green;font-size: 16px;}
 .node_show .znodeinfo-data{color: yellow;font-size: 16px; white-space: pre;}
+.node_show .znodeinfo-rawdata{color: yellow;font-size: 16px; WORD-WRAP: break-word;TABLE-LAYOUT: fixed;word-break:break-all; width: 430px;}
+.zktree-node-op{position: absolute;right: 10px;top: 10px;}
+.zktree-forms{border: 1px solid #CCC; border-radius: 10px;position: relative;background: #CCC;color: #555;}
+.zktree-forms{display: none;}
+.zktree-forms form table{margin: 20px;}
+.zktree-forms form table td{padding: 10px;}
+#zktree-forms-create{display: none;}
+#zktree-forms-update{display: none;}
+
 
 /* rewrite jstree triangle icon color */
 .jstree-default .jstree-icon{background-image:url("/static/img/32px.png");}
