--- a/src/ZKMS/views/webmaster/dashboard.html
+++ b/src/ZKMS/views/webmaster/dashboard.html
@@ -1,3 +1,11 @@
 <div class="main">
-<h1>he, hehe, hehehe...</h1>
+<h1>Welcome...</h1>
+<h3>Todo List:</h3>
+<ul>
+	<li><h4>Extractor Management</h4></li>
+	<li><h4>Database Operation</h4></li>
+	<li><h4>Remote Zone Sync</h4></li>
+	<li><h4>Login Part</h4></li>
+	<li><h4>Fast Link</h4></li>
+</ul>
 </div>
