--- a/src/ZKMS/views/webmaster/settings.html
+++ b/src/ZKMS/views/webmaster/settings.html
@@ -50,4 +50,10 @@
 
 	</table>
 	<p>PS: Edit zones' info above and, the hosts' ips must be written in a json string.</p>
+
+
+	<h3>Todo List</h3>
+	<ul>
+		<li><h4>Remote Zone Sync</h4></li>
+	</ul>
 </div>
