--- a/src/ZKMS/static/css/webmaster.css
+++ b/src/ZKMS/static/css/webmaster.css
@@ -15,6 +15,7 @@ body{background: #333333;}
 .login-stat{position: absolute;left:120px;top:50px;}
 .copyright{position: absolute;left: 20px;bottom: 50px;font-size: 12px;color: #555;}
 
+
 /* rightside main */
 .main{position:relative;width: 100%; padding:20px;color: #CCC;min-width:890px;}
 .create-form{padding:20px 10px;border: 1px solid #555;margin: 10px 0;}
@@ -24,6 +25,13 @@ body{background: #333333;}
 .list-table tr td{padding:10px 5px;line-height: 30px;vertical-align: top;}
 
 
+
+/* rightside dashboard style */
+.dashboarditem{margin: 20px 0;}
+.dashboarditem form {margin: 10px 0;}
+.dashboarditem .title{font-size:16px;font-weight: bold; background: #666;border:1px solid #555;border-radius: 10px 10px 0 0;margin:0;padding: 5px 10px;}
+.dashboarditem .info{border:1px solid #555;border-radius: 0 0 10px 10px;padding: 5px 10px;}
+.dashboarditem .links a{margin: 5px 10px;}
 
 
 /* rightside reports style */
