--- a/src/ZKMS/views/webmaster/dashboard.html
+++ b/src/ZKMS/views/webmaster/dashboard.html
@@ -1,11 +1,67 @@
 <div class="main">
-<h1>Welcome...</h1>
-<h3>Todo List:</h3>
-<ul>
-	<li><h4>Extractor Management</h4></li>
-	<li><h4>Database Operation</h4></li>
-	<li><h4>Remote Zone Sync</h4></li>
-	<li><h4>Login Part</h4></li>
-	<li><h4>Fast Link</h4></li>
-</ul>
+	<h1>Welcome...</h1>
+
+	<div class="dashboarditem">
+		<p class="title">Fast Access</p>
+		<div class="info">
+			<h5>View Broker</h5>
+			<form class="form-inline" action="/webmaster/reports/brokerdetail" method="get">
+				<input class="form-control" type="text" name="zoneid" placeholder="Zone Id" />
+				<input class="form-control" type="text" name="brokerid" placeholder="Broker Id" />
+				<button type="submit" class="btn btn-primary btn-sm">Go</button>
+			</form>
+
+			<h5>View Logger</h5>
+			<form class="form-inline" action="/webmaster/reports/loggerdetail" method="get">
+				<input class="form-control" type="text" name="zoneid" placeholder="Zone Id" />
+				<input class="form-control" type="text" name="loggerid" placeholder="Logger Id" />
+				<button type="submit" class="btn btn-primary btn-sm">Go</button>
+			</form>
+
+		</div>
+	</div>
+
+	<div class="dashboarditem">
+		<p class="title">Extractor Info</p>
+		<div class="info">
+			<p>Status: Running</p>
+
+			<button class="btn btn-primary" type="button" onclick="Start()">Start</button>
+			<button class="btn btn-primary" type="button" onclick="Stop()">Stop</button>
+			<button class="btn btn-primary" type="button" onclick="Retart()">Restart</button>
+		</div>
+	</div>
+
+	<div class="dashboarditem">
+		<p class="title">Database Tools</p>
+		<div class="info">
+			<h5>Truncate Operation</h5>
+			<button class="btn btn-danger" type="button" onclick="Truncate('all')">All Tables</button>
+			<button class="btn btn-warning" type="button" onclick="Truncate('broker')">Broker Table</button>
+			<button class="btn btn-warning" type="button" onclick="Truncate('logger')">Logger Table</button>
+			<button class="btn btn-warning" type="button" onclick="Truncate('app')">App Table</button>
+			<button class="btn btn-warning" type="button" onclick="Truncate('topic')">Topic Table</button>
+			<button class="btn btn-warning" type="button" onclick="Truncate('zone')">Zone Table</button>
+			<h5>Execute SQL</h5>
+			<form action="/webmaster/danger/execsql" method="post">
+				<textarea class="form-control" name="sql" placeholder="Sql Statement" ></textarea>
+				<br />
+				<button type="submit" class="btn btn-danger btn-sm">Run</button>
+				<button type="reset" class="btn btn-primary btn-sm">Reset</button>
+			</form>
+		</div>
+	</div>
+
+	<div class="dashboarditem">
+		<p class="title">Links</p>
+		<div class="info links">
+			<h5>Usual</h5>
+			<a href="http://yy.com" target="_blank">YY</a>
+			<a href="http://duowan.com" target="_blank">Duo Wan</a>
+			<a href="http://100.com" target="_blank">100 EDU</a>
+
+			<h5>Persional</h5>
+			<a href="http://xianmau.me" target="_blank">Xianmau</a>
+		</div>
+	</div>
 </div>
