--- a/src/ZKMS/views/webmaster/dashboard.html
+++ b/src/ZKMS/views/webmaster/dashboard.html
@@ -44,6 +44,7 @@
 
 			<h5>Delete History Data</h5>
 			<button class="btn btn-danger" type="button" onclick="DashboardDbDeleteHistory('all')">All</button>
+			<button class="btn btn-warning" type="button" onclick="DashboardDbDeleteHistory('1')">1 Days Ago</button>
 			<button class="btn btn-warning" type="button" onclick="DashboardDbDeleteHistory('7')">7 Days Ago</button>
 			<button class="btn btn-warning" type="button" onclick="DashboardDbDeleteHistory('15')">15 Days Ago</button>
 			
